<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/number_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/md_theme_light_onPrimaryContainer"
        android:text="@string/card_number_header_text"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.searchbin.presentation.custom_views.BinDetailsView
        android:id="@+id/number_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/number_luhn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_header"
        app:title="@string/length_header_text"
        tools:body="@tools:sample/full_names" />

    <com.example.searchbin.presentation.custom_views.BinDetailsView
        android:id="@+id/number_luhn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number_length"
        app:layout_constraintTop_toBottomOf="@+id/number_header"
        app:title="@string/luhn_header_text"
        tools:body="@tools:sample/full_names" />

</androidx.constraintlayout.widget.ConstraintLayout>